--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="header-content">
-        <img src="images/myphoto.JPG" class="profile-photo">
+        <img src="myphoto.JPG" class="profile-photo">
       <div class="header-text">
         <h1>Добро пожаловать на мою визитку</h1>
         <p>Латорцев Илья, студент первого курса ИШИТР группы 8К53  </p>
@@ -33,7 +33,7 @@
   <section class="projects">
     <h2>Мои проекты</h2>
     <div class="project-content">
-      <img src="images/myprojectsite.png" class="project-image">
+      <img src="myprojectsite.png" class="project-image">
       <a href="https://cybercrimedraft.tilda.ws/" target="_blank" class="project-btn">Перейти на сайт</a>
     </div>
   </section>
